@startuml
hide circle
skinparam classAttributeIconSize 0

class TableTypeController {
    - _tableTypeRepository: ITableTypeRepository
    + GetTableTypeById(Guid id): Task<IActionResult>
}

interface ITableTypeRepository<<interface>> {
    + GetTableTypeById(Guid id): Task<GetTableTypeResponseDTO>
}

class TableTypeRepository {
    - _tableTypeDao: TableTypeDAO
    + GetTableTypeById(Guid id): Task<GetTableTypeResponseDTO>
}

class TableTypeDAO {
    - _client: Client
    + GetTableTypeById(Guid id): Task<GetTableTypeResponseDTO>
}

class TableType {
    + Id: Guid
    + Name: string
    + Description: string
    + PriceByHour: decimal
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}


TableTypeController -- ITableTypeRepository
ITableTypeRepository <|-- TableTypeRepository
TableTypeRepository -- TableTypeDAO
TableTypeDAO -- TableType
@enduml
